add section hero

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 
+    <!-- header -->
     <header>
         <a href="/">WebStudio</a>
 
@@ -36,7 +37,11 @@
 
     <main>
 
-        <section></section>
+        <!-- section hero -->
+        <section>
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>
+        </section>
 
         <section></section>
 
