--- a/index.html
+++ b/index.html
@@ -66,7 +66,34 @@
             </ul>
         </section>
 
-        <section></section>
+        <!-- section our team -->
+        <section>
+            <h2>Our Team</h2>
+
+            <ul>
+                <li>
+                    <img src="" alt="Mark Guerrero" width="264">
+                    <h2>Mark Guerrero</h2>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="" alt="Tom Ford" width="264">
+                    <h2>Tom Ford</h2>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="" alt="Camila Garcia" width="264">
+                    <h2>Camila Garcia</h2>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="" alt="Daniel Wilson" width="264">
+                    <h2>Daniel Wilson</h2>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+
+        </section>
 
     </main>
 
