--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <!-- section feature -->
         <section>
             <!-- <h2>Features</h2> -->
+
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -72,27 +73,26 @@
 
             <ul>
                 <li>
-                    <img src="" alt="Mark Guerrero" width="264">
+                    <img src="./images/team_mark_guerrero.jpg" alt="Mark Guerrero" width="264">
                     <h2>Mark Guerrero</h2>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="" alt="Tom Ford" width="264">
+                    <img src="./images/team_tom_ford.jpg" alt="Tom Ford" width="264">
                     <h2>Tom Ford</h2>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="" alt="Camila Garcia" width="264">
+                    <img src="./images/team_camila_garcia.jpg" alt="Camila Garcia" width="264">
                     <h2>Camila Garcia</h2>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="" alt="Daniel Wilson" width="264">
+                    <img src="./images/team_daniel_wilson.jpg" alt="Daniel Wilson" width="264">
                     <h2>Daniel Wilson</h2>
                     <p>UI Designer</p>
                 </li>
             </ul>
-
         </section>
 
     </main>
