--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
     </main>
 
     <footer>
-        
+        <a href="/">WebStudio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing &#38; growth solutions.</p>
     </footer>
 
 </body>
