--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
     <!-- header -->
     <header>
-        <a href="/">WebStudio</a>
-
+        
         <nav>
+            <a href="./index.html">WebStudio</a>
+
             <ul>
                 <li>
                     <a href="/">Studio</a>
@@ -47,7 +48,7 @@
 
         <!-- section feature -->
         <section>
-            <!-- <h2>Features</h2> -->
+            <h2>Features</h2>
 
             <ul>
                 <li>
@@ -76,22 +77,22 @@
             <ul>
                 <li>
                     <img src="./images/team_mark_guerrero.jpg" alt="Mark Guerrero" width="264">
-                    <h2>Mark Guerrero</h2>
+                    <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/team_tom_ford.jpg" alt="Tom Ford" width="264">
-                    <h2>Tom Ford</h2>
+                    <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/team_camila_garcia.jpg" alt="Camila Garcia" width="264">
-                    <h2>Camila Garcia</h2>
+                    <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/team_daniel_wilson.jpg" alt="Daniel Wilson" width="264">
-                    <h2>Daniel Wilson</h2>
+                    <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
